Preliminary work to support arbitrary serializers in <bxml:include>s. Added a new interface to tag a serializer as "resolvable" - this allows BXMLSerializer to optionally pass context information to a sub-serializer.
Also resolved some ambiguity in the dictionary implementations of Resources and BXMLSerializer. Both of these classes used JSON.get(), etc. internally to implement get(), etc. This was misleading because the iterators returned by these classes would not reflect the actual contents of the dictionary. More importantly, it would cause any JSON.get() that included these dictionaries to fail. THis would have been a serious issue for callers using the JSON class to access values in a BXML serializer's namespace in Bindable#initialize().



git-svn-id: https://svn.apache.org/repos/asf/pivot/trunk@960387 13f79535-47bb-0310-9956-ffa450edef68